changed images and html

--- a/index.html
+++ b/index.html
@@ -70,50 +70,51 @@
   <!-- ................................................... -->
   <section class="services">
       <div class="section-title">
-          <h1 class="section-title-name">services </h1>
+          <h1 class="section-title-name">Tools and Language </h1>
       </div>
       <div class="services-center">
           <article class="services-single-service">
             <div class="services-single-service-icon">
-                <i class="fas fa-calendar-check"></i>
+                <img src="/images/html5-without-wordmark-black-white.svg" alt="" height="60px">
             </div>  
-            <h2 class="services-single-service-title">punctual</h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <h2 class="services-single-service-title">HTML</h2>
+            <p class="srvices-single-service-text">The HyperText Markup Language, or HTML is the standard markup language for documents designed to be displayed in a web browser. It can be assisted by technologies such as Cascading Style Sheets and scripting languages such as JavaScript</p>
           </article>
           <article class="services-single-service">
             <div class="services-single-service-icon">
-                <i class="fas fa-rocket"></i>
+               
+                <img src="/images/css3-logo.png" alt="https://hng.tech/" height="60px">
             </div>  
-            <h2 class="services-single-service-title">creativity</h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <h2 class="services-single-service-title">CSS</h2>
+            <p class="srvices-single-service-text">Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language such as HTML. CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.</p>
           </article>
           <article class="services-single-service">
             <div class="services-single-service-icon">
                 <i class="fas fa-mobile"></i>
             </div>  
             <h2 class="services-single-service-title">responsive design</h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <p class="srvices-single-service-text">Responsive web design is an approach to web design that makes web pages render well on a variety of devices and window or screen sizes from minimum to maximum display size. Recent work also considers the viewer proximity as part of the viewing context as an extension for RWD</p>
           </article>
           <article class="services-single-service">
             <div class="services-single-service-icon">
-                <i class="fas fa-cogs"></i>
+                <img src="/images/371212.svg" alt="" height="60px">
             </div>  
-            <h2 class="services-single-service-title">hard work</h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <h2 class="services-single-service-title">JavaScript</h2>
+            <p class="srvices-single-service-text">JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification. JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing, prototype-based object-orientation, and first-class functions.</p>
           </article>
           <article class="services-single-service">
             <div class="services-single-service-icon">
                 <i class="fas fa-laptop"></i>
             </div>  
             <h2 class="services-single-service-title">development</h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <p class="srvices-single-service-text">Web development is the work involved in developing a Web site for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web applications, electronic businesses, and social network services..</p>
           </article>
           <article class="services-single-service">
             <div class="services-single-service-icon">
                 <i class="fas fa-camera"></i>
             </div>  
             <h2 class="services-single-service-title">photography  </h2>
-            <p class="srvices-single-service-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto, ad.</p>
+            <p class="srvices-single-service-text">Photography is the art, application, and practice of creating durable images by recording light, either electronically by means of an image sensor, or chemically by means of a light-sensitive material such as photographic film..</p>
           </article>
       </div>
   </section>
@@ -211,7 +212,15 @@
       <!-- ................................................... -->
       <footer class="footer">
         <div class="footer-text">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus molestias sapiente aperiam minima eligendi adipisci nulla ut iure mollitia, voluptatibus dolorem vel, provident architecto sunt!
+            i'm always available for job opennings and any other web related services, dont hestitate to give me a shot
+            <br>
+            <address>
+                Written by <a href="anayo:anayocrescent9@gmail.com">anayo crescent</a>.<br> 
+                Visit us at:https://github.com/anayo-hub<br>
+                Example.com<br>
+                1403 collage road, Enugu <br>
+                Nigeria
+                </address>
         </div>
           <div class="footer-icons">
               
