--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
              <span class="nav-btn">
                 <i class="fa fa-bars"></i>
              </span>
-            <img class="boo" src="/images/zuri.png" alt="https://hng.tech/\">
+            <img class="boo" href="https://internship.zuri.team/" src="/images/zuri.png" alt="https://hng.tech/\">
          </div>
           <!--navlinks  -->
           <ul class="nav-links">
